<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjetMobile_Cart</string>
    <string name="cart">Cart</string>
    <string name="order" font-family="Imprima"><b>My Orders</b></string>
    <string name="produit"><b>Produit 1</b></string>
    <string name="desc">Description</string>
    <string name="Prix" font-family="Imprima"> <b>PRIX Dhs</b></string>
    <string name="total">Total items</string>
    <string name="prix_total" tools:ignore="DuplicateDefinition">25dhs</string>
    <string name="delievery">Standard Delievery</string>
    <string name="prixdel">50dhs</string>
    <string name="totaltout">Total items</string>
    <string name="prixtotaltout">125dhs</string>
    <string name="buttontext">Checkout Now</string>
    <string name="creerstore">Create your store</string>
    <string name="vente">Fill out this form</string>
    <string name="productname">Product name</string>
    <string name="producttype">Product type</string>
    <string name="productdesc">Product description</string>
    <string name="productprice">Product price</string>
    <string name="quantity"> x1 </string>
    <string name="profilestore">Add your Store Logo</string>
    <string name="storename">Store Name:</string>
    <string name="productName">Product</string>
    <string name="productDesc">Description description description description description description description description description</string>
    <string name="addToCart">Add To Cart</string>
    <string name="phonesCat">Phones and tablets</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="enter_mail">Please enter your mail</string>
    <string name="enter_pass">Please enter your password</string>
    <string name="login">Login</string>
    <string name="firstName">First Name :</string>
    <string name="lastName">Last Name :</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="email_address">Email Address :</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="reset_password"><u>Forgot Password?</u></string>
    <string name="todo">Logo</string>
    <string name="hello">Hello</string>
    <string name="UserName">Anouar</string>
    <string name="search_elements">Search elements</string>
    <string name="_100_mad">100 MAD</string>
    <string name="_150_mad">150 MAD</string>
    <string name="trending">TRENDING</string>
    <string name="dummy_text">hello my name is anouar oumaacha i am from errachidia but i am studying right now at ENSIAS </string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="favorite">favorite</string>
    <string name="modify1">modify1</string>
    <string name="delete1">delete1</string>
    <string name="delete2">delete2</string>
    <string name="modify2">modify2</string>
    <string name="delete3">delete3</string>
    <string name="modify3">modify3</string>
    <string name="delete4">delete4</string>
    <string name="modify4">modify4</string>
    <string name="delete5">delete5</string>
    <string name="modify5">modify5</string>
    <string name="delete6">delete6</string>
    <string name="modify6">modify6</string>
    <string name="add">add</string>
    <string name="logout">Logout</string>
    <string name="go_back">Go Back</string>
    <string name="details">Details</string>
    <string name="favorites">Favorites</string>
    <string name="_1000dh">1000DH</string>
    <string name="menu">Menu</string>
    <string name="product">Product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_a_store">Add a store</string>
    <string name="plus">Plus</string>
    <string name="online_store">Online Store</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password_text">Reset Psassword</string>
    <string name="logo">Logo</string>
    <string name="my_store">My Store</string>
    <string name="line">Line</string>
    <string name="fill_out_the_form">Fill out the form</string>
    <string name="product_type">Product Type:</string>
    <string name="product_name">Product Name:</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="product_description">Product Description:</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="submit">Submit</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="product_price">Product Price:</string>
    <string name="avatar">Avatar</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="register">Register</string>
    <string name="description">Description...</string>
    <string name="my_profile">My Profile</string>
    <string name="bio">Bio :</string>

</resources>