<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/img"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/emailAddress"
        style="@style/MyStyleForm"
        android:layout_marginTop="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        style="@style/MyStyleForm"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
    <Button
        android:id="@+id/login"
        style="@style/MyStyleButton"
        android:background="@drawable/round_btn"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/goToSignUpActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/first_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>