<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".StoreFormActivity">

    <TextView
        android:id="@+id/fill_out_form_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_out_the_form"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/imprima"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/product_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_below="@id/fill_out_form_textview"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/imprima"
        android:text="@string/product_type"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/product_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/product_type_textview"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_spinner"
        android:fontFamily="@font/imprima"
        android:textColor="@color/formText" />

    <TextView
        android:id="@+id/product_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/imprima"
        android:layout_below="@id/product_type_spinner"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"

        android:text="@string/product_name"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/product_name_edittext"
        style="@style/MyStyleForm"
        android:layout_below="@id/product_name_textview"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/enter_product_name"
        android:inputType="text"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/product_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name_edittext"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/imprima"
        android:text="@string/product_description"
        android:layout_marginStart="15dp"

        android:textSize="20sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/product_description_edittext"
        style="@style/MyStyleForm"
        android:layout_below="@id/product_description_textview"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/enter_product_description"
        android:inputType="text"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/product_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_edittext"
        android:layout_marginTop="25dp"
        android:text="@string/product_price"
        android:layout_marginStart="15dp"

        android:textSize="20sp"
        android:fontFamily="@font/imprima"
        android:textColorHint="@color/white"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/product_price_edittext"
        style="@style/MyStyleForm"
        android:layout_below="@id/product_price_textview"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/enter_product_price"
        android:inputType="numberDecimal"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/submit_button"
        style="@style/MyStyleButton"
        android:background="@drawable/round_btn"
        android:layout_below="@id/product_price_edittext"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:text="@string/submit"
        tools:ignore="TextContrastCheck"/>

</RelativeLayout>
