<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fill_out_form_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_out_the_form"
            android:layout_marginTop="60dp"

            android:fontFamily="@font/imprima"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="147dp"
            android:layout_height="141dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_account_box_24"
            android:contentDescription="@string/avatar" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/imprima"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/profilestore" />
        <TextView
            android:id="@+id/product_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/imprima"
            android:layout_marginTop="60dp"
            android:text="@string/storename"
            android:layout_marginStart="25dp"

            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/product_name_edittext"
            style="@style/MyStyleForm"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/enter_store_name"
            android:inputType="text"
            tools:ignore="Autofill,TextContrastCheck" />

        <Button
            android:id="@+id/button_next"
            style="@style/MyStyleButton"
            android:background="@drawable/round_btn"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>