<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="200sp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/product" />

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/textView1ay"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/produit"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView2ay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/desc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3ay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Prix"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/layouti" />

                <ImageView
                    android:id="@+id/heartpri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="63dp"
                    android:clickable="true"
                    android:contentDescription="@string/product_description"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:onClick="Show()"
                    app:srcCompat="@drawable/baseline_favorite_border_24"
                    tools:ignore="OnClick,SpeakableTextPresentCheck,ImageContrastCheck"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/heartwhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="63dp"
                    android:layout_marginStart="12dp"
                    android:visibility="invisible"
                    android:clickable="true"
                    app:srcCompat="@drawable/baseline_favorite_24"
                    android:focusable="true"
                    android:contentDescription="@string/favorites" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="63dp"
                    app:srcCompat="@drawable/baseline_delete_20"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/delete" />
            </FrameLayout>

            <TextView
                android:id="@+id/textViewqua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/quantity" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>