<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/img" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="nothing"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints="nothing"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="14"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/rePassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/first_color"
                android:hint="@string/repassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#FDCA7E"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/goToLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/log_in"
                android:textColor="@color/first_color"
                tools:ignore="TextContrastCheck"
                android:textSize="20sp"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>